--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,6 +27,8 @@ body {
     opacity: 0.8;
     border-radius: 20px;
     padding: 20px;
+    width: 95%;
+    width: 450px;
 
 }
 
@@ -38,6 +40,58 @@ body {
     font-size: 20px;
     background-color: rgb(51, 51, 51);
     color: white;
-    width: calc(100%-100px);
+    width: calc(100% - 45px);
 
+}
+
+.botao-busca {
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 50px;
+    background-color: rgb(51, 51, 51);
+    cursor: pointer;
+    float: right;
+
+
+}
+
+
+.img-busca {
+    width: 20px;
+
+}
+
+.caixa-media {
+    margin-top: 15px;
+}
+
+.cidade {
+    color: white;
+    font-size: 1.5em;
+}
+
+.temp {
+    font-size: 20px;
+    color: white;
+    margin-top: 10px;
+}
+
+.caixa-menor {
+    display: flex;
+    align-items: center;
+    color: white;
+    margin-top: 15px;
+
+
+}
+
+.texto-previsao {
+    color: white;
+    margin-left: 20px;
+}
+
+.umidade {
+    color: white;
+    margin-top: 15px;
 }
