--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,9 +38,9 @@ body {
     padding: 10px;
     border-radius: 20px;
     font-size: 20px;
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(35, 35, 35);
     color: white;
-    width: calc(100% - 45px);
+    width: calc(100% - 58px);
 
 }
 
@@ -48,10 +48,11 @@ body {
     border: none;
     outline: none;
     padding: 10px;
-    border-radius: 50px;
-    background-color: rgb(51, 51, 51);
+    border-radius: 15px;
+    background-color: rgb(126, 126, 126);
     cursor: pointer;
     float: right;
+    width: 43px;
 
 
 }
